# FastTrack

./: .gitignore  pyproject.toml  tasks.py
PythonMastery/: exercises.md  openapi.json  topics.md
RobotFrameworkUnleashed/: topics.md
RobotFrameworkUnleashed/suites/: openapidriver.robot  requestslibrary.robot
docs/: README.md  links.md
src/demo_api/: main.py
src/demo_api/models/: author.py  poem.py
src/demo_api/routers/: author.py  poem.py
src/demo_api/storage/: database.py
