[tool.poetry]
name="demo_api"
version = "0.1.0"
description = "A simple FastAPI implementation."
license = "Apache-2.0"
authors = ["Robin Mackaij <r.a.mackaij@gmail.com>"]
maintainers = ["Robin Mackaij <r.a.mackaij@gmail.com>"]
readme =  "./docs/README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Private :: Do Not Upload",
]
packages = [
    { include = "demo_api", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.0"
fastapi = "^0.100.0"
pydantic = "^2.1.0"
python-multipart = "^0.0.5"
PyYAML = "^6.0"
robotframework = "^6.0.0"
robotframework-requests = "^0.9.4"
robotframework-openapidriver = "^4.2.1"

[tool.poetry.group.dev.dependencies]
invoke = "2.2.0"

[tool.poetry.group.formatting.dependencies]
black = ">=23.7.0"
isort = ">=5.12.0"
robotframework-tidy = ">=4.4.0"

[tool.poetry.group.type-checking.dependencies]
mypy = ">=1.4.0"
pyright = ">=1.1.300"
types-requests = ">=2.28.11"
types-invoke = ">=2.0.0.6"

[tool.poetry.group.linting.dependencies]
pylint = ">=2.17.2"
ruff = ">=0.0.267"
robotframework-robocop = ">=4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "uvicorn",
    "invoke",
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
src_paths = [
    "src"
]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "logging-fstring-interpolation",
    "missing-class-docstring",
    "missing-function-docstring"
]
extension-pkg-whitelist = "pydantic"

[tool.pylint.'FORMAT CHECKER']
max-line-length=120

[tool.pylint.'SIMILARITIES CHECKER']
ignore-imports="yes"
